# Enable-WiFi-Hotspot-Together

./: .gitignore  CMakeLists.txt  README.md  ex.c  ex.cpp  ex.sh  exc  extui.c  extuic  g.c  gc  hostapd.conf  hotspot.c  hsc  my.c  myc  setup.sh  spot  spot.c  sus.c  susc  ui.c  uic  wifi-share.sh
src/: main.cpp
src/app/: Application.cpp  Application.h
src/ui/: MainWindow.cpp  MainWindow.h
